fix up notification and message icon alignment

--- a/app/assets/stylesheets/buttons_badges.css.scss
+++ b/app/assets/stylesheets/buttons_badges.css.scss
@@ -31,6 +31,7 @@ $light: #BFDDDC;
   @extend .red_badge;
   font-size: 8px;
   margin-left: -10px;
+  vertical-align: 0 !important;
 }
 
 .green_badge_connected
@@ -111,6 +112,11 @@ $light: #BFDDDC;
 .right_margin_small
 {
   margin-right: 3px;
+}
+
+.right_margin_medium
+{
+  margin-right: 5px;
 }
 
 .left_margin
