--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -76,6 +76,12 @@ a:active {text-decoration:underline;}
   color: $dark_gray; 
 }
 
+.subtitle_small
+{
+  @extend .subtitle_font;
+  font-size: 15px;
+}
+
 
 .subtitle_large
 {
